# kukuru-tts

./: .gitmodules  AGENTS.md  README.md  pyproject.toml
StyleTTS2/: baseline_thai_samples.py  kokoro_tb_utils.py  models.py  train_first.py  train_second.py  train_watchdog.sh  wandb_utils.py
checks/: README.MD
configs/: thai_smoke.yml  thai_stage1.yml  thai_stage2_resume_example.yml
docs/: ARCHITECTURE.md  THAI_RUNBOOK.md  TROUBLESHOOTING.md
scripts/: baseline_thai_samples.py  extract_voicepack.py  package_thai.py  prepare_thai_dataset.py  test_inference.py  train_thai.sh
training/: audio  config.json  kokoro_symbols.py
training_smoke/: OOD_texts.txt  train_list.txt  val_list.txt
