[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kukuru-tts"
version = "0.1.0"
description = "Fine-tuning Kokoro-82M for Thai TTS using StyleTTS2"
readme = "README.md"
authors = [
    { name="cstorm125" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "soundfile",
    "torch",
    "transformers"
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro/kokoro"]
sources = ["kokoro"]
only-packages = true

[project.urls]
Homepage = "https://github.com/cstorm125/kukuru-tts"
Repository = "https://github.com/cstorm125/kukuru-tts"
Upstream = "https://github.com/hexgrad/kokoro"

# misaki comes from PyPI (only kokoro's KPipeline imports it; the Thai
# pipeline uses KModel + fastthaig2p directly)